--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
 
         <div class="section-header">
           <h2>Valor</h2>
-          <p>Isso é o que você está garantindo ao adquirir o Turbinando Milhas hoje:</p>
+          <p>Isso é o que você está garantindo ao adquirir a jornada em jejum e oração hoje:</p>
         </div>
 
         <div class="row g-4 py-lg-5 d-flex justify-content-center" data-aos="zoom-out" data-aos-delay="100">
@@ -300,9 +300,9 @@
             <div class="pricing-item featured">
               
               <p class="text-center h4 pb-2">Começe hoje e transforme sua vida financeira</p>
-              <p class="text-center text-danger h5">De <s>R$1.497,00</s></p>
-              <h4><span>Por 12x de </span>R$119,46</h4>
-              <p class="text-center pt-2 h5">ou R$997 à vista.</p>
+              <p class="text-center text-danger h5">De <s>R$538,00</s></p>
+              <h4><span>Por 12x de </span>R$9,68</h4>
+              <p class="text-center pt-2 h5">ou R$97,00 à vista.</p>
 
               <div class="text-center">
                 <a href="https://pay.hotmart.com/O78610885P?off=gdocwoj8&bid=1704810114747" class="buy-btn">obter acesso imediato</a>
