--- a/index.html
+++ b/index.html
@@ -300,12 +300,12 @@
             <div class="pricing-item featured">
               
               <p class="text-center h4 pb-2">Começe hoje e transforme sua vida financeira</p>
-              <p class="text-center text-danger h5">De <s>R$538,00</s></p>
+              <p class="text-center text-danger h5">De <s>R$197,00</s></p>
               <h4><span>Por 12x de </span>R$9,68</h4>
               <p class="text-center pt-2 h5">ou R$97,00 à vista.</p>
 
               <div class="text-center">
-                <a href="https://pay.hotmart.com/O78610885P?off=gdocwoj8&bid=1704810114747" class="buy-btn">obter acesso imediato</a>
+                <a href="https://pay.hotmart.com/I72037728W?bid=1710183124225" class="buy-btn">Obter acesso imediato</a>
                 <img src="assets/img/pricing-details.png" class="img-fluid pricing-details" alt="">
               </div>
 
