--- a/index.html
+++ b/index.html
@@ -317,6 +317,166 @@
       </div>
     </section><!-- End Pricing Section -->
 
+    <!-- ======= C.T.A. ======= -->
+    <section id="cta">
+      <div class="container col-xxl-8 px-4 py-5" data-aos="fade-up">
+        <div class="row flex-lg-row-reverse align-items-center">
+          <div class="col-10 col-sm-8 col-lg-6">
+            <img src="assets/img/CTA-img.png" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="700" height="500" loading="lazy">
+          </div>
+          <div class="col-lg-6">
+            <div class="section-header">
+              <h2>Seu guia nessa viajem</h2>
+            </div>
+            <p class="h6 text-center">
+              Felipe Souza, tem 34 anos e é educador financeiro especialista em milhas. Trabalhou por 8 anos como desenvolvedor de software nas maiores agências de viagens corporativas do Brasil.
+              Jogou tudo para o alto para empreender, abriu sua própria hamburgueria onde foi proprietário durante 5 anos. No quarto ano de hamburgueria começou a ensinar pessoas sobre milhas e a cuidar melhor do seu dinheiro. Com um ano de projeto vendeu a hamburgueria para se dedicar totalmente em transformar a vida das pessoas, através dos conhecimentos.
+              Desde sempre foi fora da curva, em todas as suas escolhas sempre prezou por dar um salto de fé rumo ao que sempre desejava e hoje transborda tudo o que já viveu e aprendeu para poder proporcionar o mesmo a quem assim como ele não se encaixam nos padrões e lutam para viver seus sonhos!
+            </p>
+          </div>
+        </div>
+      </div>
+    </section><!-- End C.T.A. Section -->
+
+    <!-- ======= Frequently Asked Questions Section ======= -->
+    <section id="faq" class="faq">
+      <div class="container" data-aos="fade-up">
+
+        <div class="row gy-4">
+
+          <div class="col-lg-4">
+            <div class="content px-xl-5">
+              <h3><strong>Dúvidas</strong> Frequêntes</h3>
+              <p>
+                Aqui combrimos algumas das possíveis dúvidas que você ainda possa ter a respeito do curso. 
+              </p>
+            </div>
+          </div>
+
+          <div class="col-lg-8">
+
+            <div class="accordion accordion-flush" id="faqlist" data-aos="fade-up" data-aos-delay="100">
+
+              <div class="accordion-item">
+                <h3 class="accordion-header">
+                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq-content-1">
+                    <span class="num">1.</span>
+                    O que vou aprender neste curso?
+                  </button>
+                </h3>
+                <div id="faq-content-1" class="accordion-collapse collapse" data-bs-parent="#faqlist">
+                  <div class="accordion-body">
+                    Você vai embarcar em uma jornada completa pelo mundo das milhas, desde as noções básicas até estratégias avançadas para maximizar seus benefícios. Vamos explorar tópicos como cartões de crédito, transferência bonificada, vendas de milhas, hospedagem e muito mais.
+                  </div>
+                </div>
+              </div><!-- # Faq item-->
+
+              <div class="accordion-item">
+                <h3 class="accordion-header">
+                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq-content-2">
+                    <span class="num">2.</span>
+                    Quanto tempo terei acesso ao curso?
+                  </button>
+                </h3>
+                <div id="faq-content-2" class="accordion-collapse collapse" data-bs-parent="#faqlist">
+                  <div class="accordion-body">
+                    Após a inscrição, você terá acesso de 1 ano ao conteúdo do curso. E nesse período você pode aprender no seu próprio ritmo, revisitando as aulas sempre que precisar.
+                  </div>
+                </div>
+              </div><!-- # Faq item-->
+
+              <div class="accordion-item">
+                <h3 class="accordion-header">
+                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq-content-3">
+                    <span class="num">3.</span>
+                    Preciso ter algum conhecimento prévio sobre milhas?
+                  </button>
+                </h3>
+                <div id="faq-content-3" class="accordion-collapse collapse" data-bs-parent="#faqlist">
+                  <div class="accordion-body">
+                    Não é necessário ter conhecimento prévio. Começaremos desde o básico e guiaremos você passo a passo através de todos os conceitos, para que mesmo iniciantes possam acompanhar.
+                  </div>
+                </div>
+              </div><!-- # Faq item-->
+
+              <div class="accordion-item">
+                <h3 class="accordion-header">
+                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq-content-4">
+                    <span class="num">4.</span>
+                    Como faço para acessar as aulas?
+                  </button>
+                </h3>
+                <div id="faq-content-4" class="accordion-collapse collapse" data-bs-parent="#faqlist">
+                  <div class="accordion-body">
+                    Após a inscrição, você receberá um acesso exclusivo por email à nossa plataforma de ensino. Lá, você encontrará todos os módulos, aulas e recursos do curso.
+                  </div>
+                </div>
+              </div><!-- # Faq item-->
+
+              <div class="accordion-item">
+                <h3 class="accordion-header">
+                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq-content-5">
+                    <span class="num">5.</span>
+                    O curso aborda estratégias específicas para emitir passagens aéreas?
+                  </button>
+                </h3>
+                <div id="faq-content-5" class="accordion-collapse collapse" data-bs-parent="#faqlist">
+                  <div class="accordion-body">
+                    Sim, abordamos estratégias detalhadas para emissão de passagens aéreas usando diferentes companhias aéreas, incluindo a TAP. Você aprenderá a otimizar suas milhas para obter as melhores tarifas.
+                  </div>
+                </div>
+              </div><!-- # Faq item-->
+
+              <div class="accordion-item">
+                <h3 class="accordion-header">
+                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq-content-6">
+                    <span class="num">6.</span>
+                    O que é a "Meta Smart"?
+                  </button>
+                </h3>
+                <div id="faq-content-6" class="accordion-collapse collapse" data-bs-parent="#faqlist">
+                  <div class="accordion-body">
+                    A "Meta Smart" é uma estratégia avançada que ensinamos no curso. Ela ajuda você a definir metas e objetivos claros para suas milhas, permitindo que você alcance conquistas maiores e mais significativas.
+                  </div>
+                </div>
+              </div><!-- # Faq item-->
+
+              <div class="accordion-item">
+                <h3 class="accordion-header">
+                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq-content-7">
+                    <span class="num">7.</span>
+                    Vou aprender como transformar minhas milhas em renda extra?
+                  </button>
+                </h3>
+                <div id="faq-content-7" class="accordion-collapse collapse" data-bs-parent="#faqlist">
+                  <div class="accordion-body">
+                    Sim, exploraremos maneiras de monetizar suas milhas através de vendas estratégicas e outras oportunidades de renda extra.
+                  </div>
+                </div>
+              </div><!-- # Faq item-->
+
+              <div class="accordion-item">
+                <h3 class="accordion-header">
+                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq-content-8">
+                    <span class="num">8.</span>
+                    E se eu tiver mais dúvidas durante o curso?
+                  </button>
+                </h3>
+                <div id="faq-content-8" class="accordion-collapse collapse" data-bs-parent="#faqlist">
+                  <div class="accordion-body">
+                  Estamos aqui para ajudar! Além das aulas, oferecemos suporte completo. Se você tiver dúvidas, estaremos prontos para responder e orientar você.
+                  </div>
+                </div>
+              </div><!-- # Faq item-->
+
+            </div>
+
+          </div>
+        </div>
+
+      </div>
+    </section><!-- End Frequently Asked Questions Section -->
+
   </main><!-- End #main -->
 
   <!-- ======= Footer ======= -->
