--- a/index.html
+++ b/index.html
@@ -329,9 +329,20 @@
               <h2>Seu guia nessa viajem</h2>
             </div>
             <p class="h6 text-center">
-              Felipe Souza, tem 34 anos e é educador financeiro especialista em milhas. Trabalhou por 8 anos como desenvolvedor de software nas maiores agências de viagens corporativas do Brasil.
-              Jogou tudo para o alto para empreender, abriu sua própria hamburgueria onde foi proprietário durante 5 anos. No quarto ano de hamburgueria começou a ensinar pessoas sobre milhas e a cuidar melhor do seu dinheiro. Com um ano de projeto vendeu a hamburgueria para se dedicar totalmente em transformar a vida das pessoas, através dos conhecimentos.
-              Desde sempre foi fora da curva, em todas as suas escolhas sempre prezou por dar um salto de fé rumo ao que sempre desejava e hoje transborda tudo o que já viveu e aprendeu para poder proporcionar o mesmo a quem assim como ele não se encaixam nos padrões e lutam para viver seus sonhos!
+              Muito prazer, meu nome é Bianca Duarte sou do interior de São Paulo, sou casada com o Jorge, mãe da Zoe. 
+              Cresci em uma família desestruturada financeiramente, sempre tivemos dificuldades financeiras, 
+              (meu maior medo era discutir com meu marido como via meus pais discutindo por dinheiro) 
+              aos 6 anos de idade eu já me preocupava com aluguel a ser pago e mistura no prato. 
+              Aos 15 fui obrigada a assumir as finanças de casa com a separação de meus pais, 
+              com uma mãe depressiva e pai ausente iniciei minha luta para sobreviver. Foram anos de dificuldade, 
+              muitos estudos e trabalhos extras até que entrei em uma faculdade gratuita, com 24 anos fundei minha primeira empresa, 
+              o tempo passou e eu fui aprimorando como lidar com o dinheiro. 
+              Me tornei investidora e me especializei em finanças á luz da bíblia, 
+              hoje vivo uma vida totalmente diferente da que tinha quando mais nova. 
+              Eu entendo que a falta de dinheiro atinge todas as áreas da vida, 
+              por isso hoje me dedico a mudar a realidade da maior quantidade de famílias que tiver contato, 
+              para que tenham qualidade de vida, paz financeira e alegria. Para que os casamentos sejam preservados, 
+              os filhos sejam educados com boa educação e para que tenham de fato ATÉ TRANSBORDAR.
             </p>
           </div>
         </div>
