--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
           </div>
           <div class="col-lg-6">
             <div class="section-header">
-              <h2>Seu guia nessa viajem</h2>
+              <h2>Sua guia nessa jornada de transformação</h2>
             </div>
             <p class="h6 text-center">
               Muito prazer, meu nome é Bianca Duarte sou do interior de São Paulo, sou casada com o Jorge, mãe da Zoe. 
@@ -377,7 +377,7 @@
                 </h3>
                 <div id="faq-content-1" class="accordion-collapse collapse" data-bs-parent="#faqlist">
                   <div class="accordion-body">
-                    Você vai embarcar em uma jornada completa pelo mundo das milhas, desde as noções básicas até estratégias avançadas para maximizar seus benefícios. Vamos explorar tópicos como cartões de crédito, transferência bonificada, vendas de milhas, hospedagem e muito mais.
+                    Como organizar suas finanças seguindo os princípios bíblicos e com isso prosperar de forma organizada e consistente
                   </div>
                 </div>
               </div><!-- # Faq item-->
@@ -391,7 +391,7 @@
                 </h3>
                 <div id="faq-content-2" class="accordion-collapse collapse" data-bs-parent="#faqlist">
                   <div class="accordion-body">
-                    Após a inscrição, você terá acesso de 1 ano ao conteúdo do curso. E nesse período você pode aprender no seu próprio ritmo, revisitando as aulas sempre que precisar.
+                    1 ano.
                   </div>
                 </div>
               </div><!-- # Faq item-->
@@ -400,12 +400,12 @@
                 <h3 class="accordion-header">
                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq-content-3">
                     <span class="num">3.</span>
-                    Preciso ter algum conhecimento prévio sobre milhas?
+                    Preciso ter algum conhecimento prévio sobre finanças?
                   </button>
                 </h3>
                 <div id="faq-content-3" class="accordion-collapse collapse" data-bs-parent="#faqlist">
                   <div class="accordion-body">
-                    Não é necessário ter conhecimento prévio. Começaremos desde o básico e guiaremos você passo a passo através de todos os conceitos, para que mesmo iniciantes possam acompanhar.
+                    Não! Nós vamos te auxiliar do princípio ao fim.
                   </div>
                 </div>
               </div><!-- # Faq item-->
@@ -419,7 +419,7 @@
                 </h3>
                 <div id="faq-content-4" class="accordion-collapse collapse" data-bs-parent="#faqlist">
                   <div class="accordion-body">
-                    Após a inscrição, você receberá um acesso exclusivo por email à nossa plataforma de ensino. Lá, você encontrará todos os módulos, aulas e recursos do curso.
+                    Após a compra você receberá um email com o acesso, caso tenha alguma dificuldade chame o nosso suporte no whatsapp.
                   </div>
                 </div>
               </div><!-- # Faq item-->
@@ -428,12 +428,12 @@
                 <h3 class="accordion-header">
                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq-content-5">
                     <span class="num">5.</span>
-                    O curso aborda estratégias específicas para emitir passagens aéreas?
+                    O curso aborda estratégias específicas para investir?
                   </button>
                 </h3>
                 <div id="faq-content-5" class="accordion-collapse collapse" data-bs-parent="#faqlist">
                   <div class="accordion-body">
-                    Sim, abordamos estratégias detalhadas para emissão de passagens aéreas usando diferentes companhias aéreas, incluindo a TAP. Você aprenderá a otimizar suas milhas para obter as melhores tarifas.
+                    Sim.
                   </div>
                 </div>
               </div><!-- # Faq item-->
@@ -442,12 +442,12 @@
                 <h3 class="accordion-header">
                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq-content-6">
                     <span class="num">6.</span>
-                    O que é a "Meta Smart"?
+                    O que é o "Código 31"?
                   </button>
                 </h3>
                 <div id="faq-content-6" class="accordion-collapse collapse" data-bs-parent="#faqlist">
                   <div class="accordion-body">
-                    A "Meta Smart" é uma estratégia avançada que ensinamos no curso. Ela ajuda você a definir metas e objetivos claros para suas milhas, permitindo que você alcance conquistas maiores e mais significativas.
+                    É a nossa metodologia baseada em princípios bíblicos e experiência de vida. Essa metodologia possui 3 etapas: domine o dinheiro, diversifique sua renda e realize bons investimentos.  
                   </div>
                 </div>
               </div><!-- # Faq item-->
@@ -456,12 +456,12 @@
                 <h3 class="accordion-header">
                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq-content-7">
                     <span class="num">7.</span>
-                    Vou aprender como transformar minhas milhas em renda extra?
+                    Vou aprender como economizar, aumentar a fonte de renda e gerir melhor meu dinheiro?
                   </button>
                 </h3>
                 <div id="faq-content-7" class="accordion-collapse collapse" data-bs-parent="#faqlist">
                   <div class="accordion-body">
-                    Sim, exploraremos maneiras de monetizar suas milhas através de vendas estratégicas e outras oportunidades de renda extra.
+                    Sim.
                   </div>
                 </div>
               </div><!-- # Faq item-->
@@ -475,7 +475,7 @@
                 </h3>
                 <div id="faq-content-8" class="accordion-collapse collapse" data-bs-parent="#faqlist">
                   <div class="accordion-body">
-                  Estamos aqui para ajudar! Além das aulas, oferecemos suporte completo. Se você tiver dúvidas, estaremos prontos para responder e orientar você.
+                    Nosso suporte está disponível em horário comercial no whatsapp.
                   </div>
                 </div>
               </div><!-- # Faq item-->
